<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="com_mixpanel_android_next">Next question</string>
    <string name="com_mixpanel_android_previous">Previous question</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <color name="com_mixpanel_android_selected">#66ffffff</color>


    <!--Used in ImageProcessFragment-->
    <string name="fragment_image_process_first_progress_text">Sending image...</string>
    <string name="fragment_image_process_second_progress_text">Analyzing image...</string>

    <!--Used in scan_not_found layout-->
    <string name="scan_not_found_body">No products were matched with this item.\nShall we try again?</string>
    <string name="scan_not_found_headline">Hmm&#x2026;</string>
    <string name="scan_not_found_button">Sure!</string>

    <!--Used in scanning tips dialog-->
    <string name="scanning_tips_headline">Scanning Tips</string>
    <string name="scanning_tips_tip_1">Hold still in vertical orientation</string>
    <string name="scanning_tips_tip_2">Place item of interest in middle of the screen</string>
    <string name="scanning_tips_tip_3">Tap screen to focus</string>
    <string name="scanning_tips_tip_4">Have a good lighting, try to avoid using the flash</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
